# quant-test

./: .gitignore  README.md  pyproject.toml  test.py  verify_db_metadata.py
docs/architecture/: mvp_project_structure_v1.3.md
scripts/: fetch_history_2013_to_now.py  fetch_history_2013_to_now_em_to_csv.py  fix_trade_date_format.py  init_db.py  load_history_from_stock_csv.py
src/: data_fetch.py  fetch_history_2013_to_now_em_to_csv.py  fetch_latest_day.py  load_daily_snapshot.py
src/qrp_atlas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qrp_atlas/config/: __init__.py  paths.py  settings.py
src/qrp_atlas/contracts/: __init__.py  conventions.py  fields.py  mappings.py  schema.py  validate.py
src/qrp_atlas/pipeline/: duckdb_store.py
web/: app.py  streamlit_replay_mvp_design_doc.md
web/.streamlit/: config.toml
web/pages/: 01_Chart.py  02_Market.py
